[package]
name = "rust_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
fuzzy-matcher = "0.3.7"
zip = "0.5.13"
eframe = "0.16.0"
log = "0.4.14"
env_logger = "0.9.0"
native-dialog = "0.5.6"
rayon = "1.6.1"
num_cpus = "1.16.0"